<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_box_terms_and_condition_and_privacy_policy_background"
    android:showDividers="middle"
    android:divider="@drawable/gray_divider"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/important"
        android:textAlignment="center"
        android:fontFamily="@font/sf_pro_display_bold"
        android:textSize="18sp"
        android:textColor="@color/black"


        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tell_us_how_to_improve"
        android:textAlignment="center"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textSize="16sp"
        android:textColor="@color/black"


        />
    </LinearLayout>
    <Button

        android:id="@+id/option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_don_t_receive_notifications"
        android:textAllCaps="false"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@color/white"
        android:textColor="#487FD1"
        android:fontFamily="@font/sf_pro_display_bold"
        />
    <Button
        android:id="@+id/option2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_matches"
        android:textAllCaps="false"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@color/white"

        android:textColor="#487FD1"
        android:fontFamily="@font/sf_pro_display_bold"


        />
    <Button
        android:fontFamily="@font/sf_pro_display_bold"
        android:id="@+id/option3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_don_t_like_the_users_here"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:textColor="#487FD1"
        style="@style/Widget.AppCompat.Button.Borderless"

        />
    <Button
        android:fontFamily="@font/sf_pro_display_bold"
        android:id="@+id/option4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_doesn_t_have_what_i_want"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:textColor="#487FD1"
        style="@style/Widget.AppCompat.Button.Borderless"

        />
    <Button
        android:fontFamily="@font/sf_pro_display_bold"
        android:id="@+id/option5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_problem_bugs"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:textColor="#487FD1"
        style="@style/Widget.AppCompat.Button.Borderless"

        />
    <Button
        android:fontFamily="@font/sf_pro_display_bold"
        android:id="@+id/option6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:textColor="@color/red"
        style="@style/Widget.AppCompat.Button.Borderless"

        />
    <Button
        android:fontFamily="@font/sf_pro_display_bold"
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:textColor="#487FD1"
        style="@style/Widget.AppCompat.Button.Borderless"

        />
</LinearLayout>