<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="false">

    <ImageButton
    android:id="@+id/backButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_marginTop="6dp"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/app_name"
    android:padding="16dp"
    android:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/swipe_right_to_start_chatting1"
        android:textColor="#2E2E5B"
        android:textSize="20sp" />


    <com.yalantis.library.Koloda
        android:id="@+id/koloda"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:background="@android:color/transparent"
        app:koloda_card_layout="@layout/item_koloda"
        app:koloda_card_offsetY="16dp"
        app:koloda_max_visible_cards="4"
        />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/ic_skip"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/dislike"
            android:src="@drawable/ic_skip"
            android:padding="10dp" />

        <ImageButton
            android:id="@+id/ic_chat"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/start_a_chat"
            android:src="@drawable/ic_chat"
            android:padding="10dp"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

</RelativeLayout>