<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6ff"
    android:padding="20dp">

    <!-- Create a display name -->

    <!-- Email EditText -->

    <TextView
        android:id="@+id/create_a_di"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:text="@string/create_a_display_name"
        android:textAppearance="@style/create_a_display_name"
        android:textSize="29sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_a_di"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColorHint="#B0B0CA"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_a_di" />

    <!-- Terms & Conditions -->
    <TextView
        android:id="@+id/tvTermsConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/feel_free_we_do_not_ask_your_real_name_but_it_must_comply_with_the_terms_conditions"
        android:textColor="#2E2E5B"
        android:textSize="14sp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />


    <!-- Create Account Button -->
    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTermsConditions"
        android:layout_marginStart="4dp"
        android:layout_marginTop="346dp"
        android:background="@drawable/rounded_button"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTermsConditions" />

</androidx.constraintlayout.widget.ConstraintLayout>
