<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_box_terms_and_condition_and_privacy_policy_background"
android:showDividers="middle"
    android:divider="@drawable/gray_divider"
    >
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Terms and privacy policy"
    android:textAlignment="center"
    android:fontFamily="@font/sf_pro_display_bold"
    android:textSize="18sp"
    android:textColor="@color/black" />
    <Button
        android:id="@+id/terms_and_condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_conditions"
        android:textAllCaps="false"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@color/white"
android:textColor="#487FD1"
        android:fontFamily="@font/sf_pro_display_bold"
        />
    <Button
        android:id="@+id/show_privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        android:textAllCaps="false"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@color/white"

        android:textColor="#487FD1"
        android:fontFamily="@font/sf_pro_display_bold"


        />
    <Button
        android:fontFamily="@font/sf_pro_display_bold"
android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:textColor="#487FD1"
        style="@style/Widget.AppCompat.Button.Borderless"

        />
</LinearLayout>