<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.CreateTopicActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/start_a_topic"
        android:textColor="#616161"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/topic_title"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/enter_chamber_title"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="text"
        android:autofillHints=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Button
        android:id="@+id/create_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_button"
        android:text="@string/create_a_topic"
        android:layout_margin="20dp"
        android:enabled="false"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topic_title"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/too_many_topics_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/create_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:flow_horizontalAlign="center"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/too_many_topics_title"
            android:textAlignment="center"
            android:textSize="18sp"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>
        <Button
            android:id="@+id/clear_all_topics_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Clear all topics"
            android:textColor="#fff"
            android:background="@drawable/rounded_button"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>